--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "team-reflex/discord-php": "dev-master",
         "commandstring/env": "^1.0",
-        "symfony/console": "^6.2"
+        "symfony/console": "^6.2",
+        "duzun/hquery": "^3.0",
+        "roave/better-reflection": "^6.7"
     },
     "autoload": {
         "psr-4": {
